--- a/src/css/dblx/components/form.less
+++ b/src/css/dblx/components/form.less
@@ -86,7 +86,7 @@ input[type="checkbox"] {
     vertical-align: middle;
     padding-top: 7px;
     padding-bottom: 7px;
-
+    padding-right:10px;
     &:lang(en) {
       padding-right: 8px;
     }
