--- a/src/css/table.less
+++ b/src/css/table.less
@@ -1,4 +1,5 @@
 @import "base";
+@import "dblx/themes/default/custom";
 
 .abc-table-header {
   margin: @margin 8px;
@@ -16,18 +17,28 @@
   }
 }
 
+.table-tab {
+  border-bottom: 1px solid @border-color-base;
+  padding:@margin 0;
+}
+
 .table-container {
   border: 1px solid #e1e6eb;
+
   // 表头
   .table-header {
     background: #f5f6fa;
     height: 40px;
     border-bottom: 1px solid #e1e6eb;
     margin-bottom: 0;
-    padding: 0 8px;
+    padding: 0;
     line-height: 40px;
     color: #333;
     font-size: @font-size-md;
+    .text-table-header {
+      border-left: 5px solid #6D7781;
+      text-indent: @margin;
+    }
   }
   .ant-table-pagination {
     padding-right: 8px;
