--- a/src/css/dblx/components/form.less
+++ b/src/css/dblx/components/form.less
@@ -71,7 +71,7 @@ input[type="checkbox"] {
   font-size: @font-size-base;
   margin-bottom: @form-item-margin-bottom;
   color: #666;
-
+  padding:@form-item-padding-top-bottom 0;
   &-control {
     line-height: 32px;
   }
